2010-02-26  Glenn Morris  <rgm@gnu.org>

	* message.el (message-send-mail-function): Change the default, so that
	it inherits from a customized send-mail-function.  (Bug#5643)

2010-02-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-treat-display-x-face): Don't burp if
	shell-command-to-string signals an error (bug#5299).

2010-02-24  Glenn Morris  <rgm@gnu.org>

	* message.el (message-smtpmail-send-it)
	(message-send-mail-with-mailclient): Doc fixes.

2010-02-16  Glenn Morris  <rgm@gnu.org>

	* message.el (message-default-mail-headers): Change the default value
	to ease the transition from mail-mode to message-mode.  (Bug#5555)

2010-01-17  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-mail): Just pass yank-action on to message-setup.
	(message-setup): Handle (FUN . ARGS) form of yank-action.
	(message-with-reply-buffer, message-widen-reply)
	(message-yank-original): Handle non-buffer values of
	message-reply-buffer (Bug#4080).
	(message-setup-1): Prefer to save message-reply-buffer as a buffer.

2010-01-17  Juanma Barranquero  <lekktu@gmail.com>

	* nnmairix.el (nnmairix-group-delete-recreate-this-group):
	Fix typo in docstring.

2010-01-08  Jason Rumney  <jasonr@gnu.org>

	* sieve-manage.el (sieve-manage-parse-capability-1): Loosely match OK
	response.

2010-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): Work for prefix keys.

	* message.el (message-check-news-header-syntax): Protect against a
	string that `rfc822-addresses' returns when parsing fails.

2010-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-invisible-p, gnus-next-char-property-change)
	(gnus-previous-char-property-change): New functions.

	* gnus-sum.el (gnus-forward-line-ignore-invisible): Use them.

2010-01-05  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-sum.el (gnus-forward-line-ignore-invisible): New function.
	(gnus-summary-recenter): Use it instead of forward-line.  (Bug#5257)
